Layout Change - Moved stats section up

--- a/index.html
+++ b/index.html
@@ -309,10 +309,135 @@
                         </div>
                     </div>
                 </div>
-            </div>--!>
+            </div>-->
         </div>  
     </section>
 
+    <!-- Prizes and Stats section -->
+    <section class="our-ticket-pricing-table-area bg-img bg-gradient-overlay section-padding-100-0 jarallax">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-12">
+                    <div class="about-content-text mb-80">
+                        <h3 class="text-center wow fadeInUp" data-wow-delay="300ms"
+                            style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                            HackVerse 1.0 Stats & Prizes</h3>
+                    </div>
+                </div>
+            </div>
+            <div class= "row stats">
+                <div class="col-12 col-lg-3">
+                    <div class=" text-center mb-100 wow fadeInUp statDisplay"
+                    data-wow-delay="300ms"
+                    style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                        <i class="fas fa-users fa-4x"></i>
+                        <div class = "milestone-number">
+                            <span class="number-holder">2461</span>
+                        </div>
+                        <div class = "milestone-desc">Total Registrations</div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-3">
+                    <div class=" text-center mb-100 wow fadeInUp statDisplay"
+                    data-wow-delay="300ms"
+                    style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                        <i class="fas fa-user-secret fa-4x"></i>
+                        <div class = "milestone-number" >
+                            <span class="number-holder">180</span>
+                            <span class="number-suffix">+</span>
+                        </div>
+                        <div class = "milestone-desc">Hackers Hosted</div>
+                    </div>
+                </div>   
+                <div class="col-12 col-lg-3">
+                    <div class=" text-center mb-100 wow fadeInUp statDisplay"
+                    data-wow-delay="300ms"
+                    style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                        <i class="fas fa-university fa-4x"></i>
+                        <div class = "milestone-number" >
+                            <span class="number-holder">80</span>
+                            <span class="number-suffix">+</span>
+                        </div>
+                        <div class = "milestone-desc">Engineering Institutes</div>
+                    </div>
+                </div>   
+                <div class="col-12 col-lg-3">
+                    <div class=" text-center mb-100 wow fadeInUp statDisplay"
+                    data-wow-delay="300ms"
+                    style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                        <i class="fas fa-globe fa-4x"></i>
+                        <div class = "milestone-number" >
+                            <span class="number-holder">30</span>
+                            <span class="number-suffix">+</span>
+                        </div>
+                        <div class = "milestone-desc">Companies</div>
+                    </div>
+                </div>    
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp"
+                        data-wow-delay="300ms"
+                        style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                        <h6 class="ticket-plan" style="background-color: #FFD700 !important">1st Prize</h6>
+                        <div class="ticket-icon">
+                            <img src="img/core-img/Gold_Cup.webp" onerror="this.onerror=null;this.src='img/core-img/Gold_Cup.png';" alt="">
+                        </div>
+                        <h2 class="ticket-price"><span>₹</span>75,000</h2>
+                        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                        <div class="ticket-pricing-table-details">
+                            <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                            <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
+                            <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
+                            <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
+                            <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp"
+                        data-wow-delay="300ms"
+                        style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                        <h6 class="ticket-plan" style="background-color: #C0C0C0 !important">2nd Prize</h6>
+                        <div class="ticket-icon">
+                            <img src="img/core-img/Silver_Cup.webp" onerror="this.onerror=null;this.src='img/core-img/Silver_Cup.png';" alt="">
+                        </div>
+                        <h2 class="ticket-price"><span>₹</span>60,000</h2>
+                        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                        <div class="ticket-pricing-table-details">
+                            <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                            <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
+                            <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
+                            <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
+                            <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp"
+                        data-wow-delay="300ms"
+                        style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                        <h6 class="ticket-plan" style="background-color: #CD7F32 !important">3rd Prize</h6>
+                        <div class="ticket-icon">
+                            <img src="img/core-img/Bronze_Cup.webp" onerror="this.onerror=null;this.src='img/core-img/Bronze_Cup.png';" alt="">
+                        </div>
+                        <h2 class="ticket-price"><span>₹</span>40,000</h2>
+                        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                        <div class="ticket-pricing-table-details">
+                            <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                            <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
+                            <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
+                            <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
+                            <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                        </div> -->
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--Prizes and Stats END-->
+    
     <!--TRACKS Start-->
     <section style="padding-top: 0%;" class="what-we-offer-area section-padding-100-70" id="tracks">
         <div class="container">
@@ -396,7 +521,6 @@
     <!--TRACKS End-->
 
     <!-- Our Speakers and Judges Area Start -->
-
     <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60"
     style="background-image: url(img/bg-img/3.jpg);">
     
@@ -533,129 +657,6 @@
     </section>
     <!-- Our Speaker and Judges Area End -->
 
-    <!-- Prizes and Stats section -->
-    <section class="our-ticket-pricing-table-area bg-img bg-gradient-overlay section-padding-100-0 jarallax">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-12">
-                    <div class="about-content-text mb-80">
-                        <h3 class="text-center wow fadeInUp" data-wow-delay="300ms"
-                            style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                            Stats & Prizes</h3>
-                    </div>
-                </div>
-            </div>
-            <div class= "row stats">
-                <div class="col-12 col-lg-3">
-                    <div class=" text-center mb-100 wow fadeInUp statDisplay"
-                    data-wow-delay="300ms"
-                    style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                        <i class="fas fa-users fa-4x"></i>
-                        <div class = "milestone-number">
-                            <span class="number-holder">2461</span>
-                        </div>
-                        <div class = "milestone-desc">Total Registrations</div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3">
-                    <div class=" text-center mb-100 wow fadeInUp statDisplay"
-                    data-wow-delay="300ms"
-                    style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                        <i class="fas fa-user-secret fa-4x"></i>
-                        <div class = "milestone-number" >
-                            <span class="number-holder">180</span>
-                            <span class="number-suffix">+</span>
-                        </div>
-                        <div class = "milestone-desc">Hackers Hosted</div>
-                    </div>
-                </div>   
-                <div class="col-12 col-lg-3">
-                    <div class=" text-center mb-100 wow fadeInUp statDisplay"
-                    data-wow-delay="300ms"
-                    style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                        <i class="fas fa-university fa-4x"></i>
-                        <div class = "milestone-number" >
-                            <span class="number-holder">80</span>
-                            <span class="number-suffix">+</span>
-                        </div>
-                        <div class = "milestone-desc">Engineering Institutes</div>
-                    </div>
-                </div>   
-                <div class="col-12 col-lg-3">
-                    <div class=" text-center mb-100 wow fadeInUp statDisplay"
-                    data-wow-delay="300ms"
-                    style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                        <i class="fas fa-globe fa-4x"></i>
-                        <div class = "milestone-number" >
-                            <span class="number-holder">30</span>
-                            <span class="number-suffix">+</span>
-                        </div>
-                        <div class = "milestone-desc">Companies</div>
-                    </div>
-                </div>    
-            </div>
-            <div class="row">
-                <div class="col-12 col-lg-4">
-                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp"
-                        data-wow-delay="300ms"
-                        style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                        <h6 class="ticket-plan" style="background-color: #FFD700 !important">1st Prize</h6>
-                        <div class="ticket-icon">
-                            <img src="img/core-img/Gold_Cup.webp" onerror="this.onerror=null;this.src='img/core-img/Gold_Cup.png';" alt="">
-                        </div>
-                        <h2 class="ticket-price"><span>₹</span>75,000</h2>
-                        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
-                        <div class="ticket-pricing-table-details">
-                            <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
-                            <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
-                            <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
-                            <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
-                            <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
-                        </div> -->
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp"
-                        data-wow-delay="300ms"
-                        style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                        <h6 class="ticket-plan" style="background-color: #C0C0C0 !important">2nd Prize</h6>
-                        <div class="ticket-icon">
-                            <img src="img/core-img/Silver_Cup.webp" onerror="this.onerror=null;this.src='img/core-img/Silver_Cup.png';" alt="">
-                        </div>
-                        <h2 class="ticket-price"><span>₹</span>60,000</h2>
-                        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
-                        <div class="ticket-pricing-table-details">
-                            <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
-                            <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
-                            <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
-                            <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
-                            <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
-                        </div> -->
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp"
-                        data-wow-delay="300ms"
-                        style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                        <h6 class="ticket-plan" style="background-color: #CD7F32 !important">3rd Prize</h6>
-                        <div class="ticket-icon">
-                            <img src="img/core-img/Bronze_Cup.webp" onerror="this.onerror=null;this.src='img/core-img/Bronze_Cup.png';" alt="">
-                        </div>
-                        <h2 class="ticket-price"><span>₹</span>40,000</h2>
-                        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
-                        <div class="ticket-pricing-table-details">
-                            <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
-                            <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
-                            <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
-                            <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
-                            <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
-                        </div> -->
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
 
     <section>
         <div class="container">
