--- a/index.html
+++ b/index.html
@@ -41,10 +41,6 @@
     <link rel="stylesheet" href="css/gallaryStyle.css">
     <link rel="stylesheet" href="./css/testimonial.css">
 
-<<<<<<< HEAD
-    
-=======
->>>>>>> fd535ff3d6c58053ff3e4fe86c23956022d3db49
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -1602,122 +1598,131 @@
                         <!-- slides -->
                         <div class="swiper-slide">
                             <div class="testimonial__card">
-                                <div class="testimonial__img">
+                                <!-- <div class="testimonial__img">
                                     <img src="./img/img_1.jpg" alt="">
-                                </div>
-                                <h2 class="testimonial__name">Lorem ipsum 1</h2>
+                                </div> -->
                                 <div class="testimonial__description" >
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident suscipit corrupti distinctio, 
-                                        recusandae architecto consequatur. Dolorum laboriosam tempora excepturi consequatur voluptatibus, 
-                                        odio repellendus? Alias repellat cum ipsum minima quasi commodi.
+                                        HackVerse was an intricately planned and seamless executed event, where the efforts of the organizers really showed. Everything went through perfectly, couldn't find a flaw even if I tried.
                                     </p>
                                 </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="testimonial__card">
-                                <div class="testimonial__img">
-                                    <img src="./img/img_2.jpg" alt="">
-                                </div>
-                                <h2 class="testimonial__name">Lorem ipsum 2</h2>
-                                <div class="testimonial__description" >
-                                    <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam culpa sapiente autem soluta ullam aliquam. 
-                                        Accusantium obcaecati, architecto fugit dolore hic dolorum facilis, accusamus numquam molestias natus pariatur, 
-                                        porro ratione quo perspiciatis voluptatem reiciendis inventore. Excepturi vero quam laboriosam ut et cumque? 
-                                        Vitae cumque ipsa magni minus molestias repellat, sapiente debitis, voluptate facilis, 
-                                        illum eveniet molestiae non obcaecati fuga ducimus quis inventore magnam sint quaerat repellendus et? 
-                                        Ut eum quo optio vitae perferendis, libero dolorem?    
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="testimonial__card">
-                                <div class="testimonial__img">
-                                    <img src="./img/img_3.jpg" alt="">
-                                </div>
-                                <h2 class="testimonial__name">Lorem ipsum 3</h2>
-                                <div class="testimonial__description" >
-                                    <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam culpa sapiente autem soluta ullam aliquam. 
-                                        Accusantium obcaecati, architecto fugit dolore hic dolorum facilis, accusamus numquam molestias natus pariatur, 
-                                        porro ratione quo perspiciatis voluptatem reiciendis inventore. Excepturi vero quam laboriosam ut et cumque? 
-                                        Vitae cumque ipsa magni minus molestias repellat, sapiente debitis, voluptate facilis, 
-                                        illum eveniet molestiae non obcaecati fuga ducimus quis inventore magnam sint quaerat repellendus et? 
-                                        Ut eum quo optio vitae perferendis, libero dolorem?    
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="testimonial__card">
-                                <div class="testimonial__img">
-                                    <img src="./img/img_4.jpg" alt="">
-                                </div>
-                                <h2 class="testimonial__name">Lorem ipsum 4</h2>
-                                <div class="testimonial__description" >
-                                    <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam culpa sapiente autem soluta ullam aliquam. 
-                                        Accusantium obcaecati, architecto fugit dolore hic dolorum facilis, accusamus numquam molestias natus pariatur, 
-                                        porro ratione quo perspiciatis voluptatem reiciendis inventore. Excepturi vero quam laboriosam ut et cumque? 
-                                        Vitae cumque ipsa magni minus molestias repellat, sapiente debitis, voluptate facilis, 
-                                        illum eveniet molestiae non obcaecati fuga ducimus quis inventore magnam sint quaerat repellendus et? 
-                                        Ut eum quo optio vitae perferendis, libero dolorem?    
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="testimonial__card">
-                                <div class="testimonial__img">
+                                <!-- <div class="testimonial__img">
                                     <img src="./img/img_5.jpg" alt="">
-                                </div>
-                                <h2 class="testimonial__name">Lorem ipsum 5</h2>
+                                </div> -->
                                 <div class="testimonial__description" >
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam culpa sapiente autem soluta ullam aliquam. 
-                                        Accusantium obcaecati, architecto fugit dolore hic dolorum facilis, accusamus numquam molestias natus pariatur, 
-                                        porro ratione quo perspiciatis voluptatem reiciendis inventore. Excepturi vero quam laboriosam ut et cumque? 
-                                        Vitae cumque ipsa magni minus molestias repellat, sapiente debitis, voluptate facilis, 
-                                        illum eveniet molestiae non obcaecati fuga ducimus quis inventore magnam sint quaerat repellendus et? 
-                                        Ut eum quo optio vitae perferendis, libero dolorem?    
+                                        It was an exceptional experience from the team HackVerse-NITK. I hope you guys conduct more hackathon(s) like this in future to help us to learn and experience the event of pure coding and brain-storming to work on real-time idea(s) or project. <br>
+
+                                        And i hope we still be in contact to be in help eachother out for future projects. <br>
+                                        Thanks Again!!! <br>
+                                        Team: NullCrew <br>
+                                        <a href="https://instagram.com/itsbhanupratap">@ibhanu</a>, 
+                                        <a href="https://instagram.com/abhayrm">@abhayrm</a>,
+                                        <a href="https://instagram.com/wee_pert">@Ashritha</a>
+                                        <br>
                                     </p>
                                 </div>
+                                <h2 class="testimonial__name"><em> NullCrew </em></h2>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="testimonial__card">
-                                <div class="testimonial__img">
-                                    <img src="./img/img_6.jpg" alt="">
-                                </div>
-                                <h2 class="testimonial__name">Lorem ipsum 6</h2>
-                                <div class="testimonial__description" >
-                                    <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam culpa sapiente autem soluta ullam aliquam. 
-                                        Accusantium obcaecati, architecto fugit dolore hic dolorum facilis, accusamus numquam molestias natus pariatur, 
-                                        porro ratione quo perspiciatis voluptatem reiciendis inventore. Excepturi vero quam laboriosam ut et cumque? 
-                                        Vitae cumque ipsa magni minus molestias repellat, sapiente debitis, voluptate facilis, 
-                                        illum eveniet molestiae non obcaecati fuga ducimus quis inventore magnam sint quaerat repellendus et? 
-                                        Ut eum quo optio vitae perferendis, libero dolorem?    
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="testimonial__card">
-                                <div class="testimonial__img">
+                                <!-- <div class="testimonial__img">
                                     <img src="./img/img_7.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                        Hackverse started with an innovative, encouraging boost and the organizers maintained the whole through out the event. It encouraged the students to identify the existing social problems and find solutions through the selection of different tracks and work on it. It serves as a platform to excel ourselves and most importantly, interact with people from different regions across the country and their technical approaches.
+                                        Overall i'd say, it had an enriching and once in a graduation time experience. Looking forward to many such events in the days to come.
+                                    </p>
                                 </div>
-                                <h2 class="testimonial__name">Lorem ipsum 7</h2>
-                                <p class="testimonial__description">lorem ipsum dol</p>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_4.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                        
+                                        import happiness<br>
+                                        import support<br>
+                                        import friends<br>
+                                        import knowledge<br>
+                                        import memories<br>
+                                        i=3000<br>
+                                        while(i!=3000):<br>
+                                            print("Fabulous hackethon,loved it,mishal rocks,great hackverse team,awsome name by govind,beautiful goodies.We love Hackverse 3000 times")<br>
+                                            i+=1<br>
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_5.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                     There should be some snacks and coffee available all the time. The food could have been better too.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_6.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                        It was an exceptional experience from the team HackVerse-NITK. I hope you guys conduct more hackathon(s) like this in future to help us to learn and experience the event of pure coding and brain-storming to work on real-time idea(s) or project.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_7.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description">
+                                    <p>
+                                       The organization of events was really good however it was kind of a little serious, it would be fun if we had a longer hackathon for about 30 hours or more.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_7.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description">
+                                    <p>
+                                        The overall hackathon experience was good,learnt new jargons, explored new ways to look at the problem. The shortlisting of top 10 teams could have been even better and more transparent,rather than looking for best ideas in individual streams,it would have made more sense to look for the top team among all the participants irrespective of the field their worked on.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
                             </div>
                         </div>
 
