add testimonials section #27 (#33)
* complete testimonial section

* organize the code of testimonials section

* complete testimonials with content

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/gallaryStyle.css">
+    <link rel="stylesheet" href="./css/testimonial.css">
 
     <script type="application/ld+json">
         {
@@ -67,6 +68,11 @@
             }
         }
     </script>
+    <!-- ***bootstrap and jquery***-->
+    <!-- jQuery 2.2.4 -->
+    <script src="/js/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="/js/bootstrap.min.js"></script>
 </head>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -868,7 +874,7 @@
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.linode.com/"><img
-                                    src="img/sponsors-img/linode-full-RGB-fc.webp" onerror="this.onerror=null;this.src='img/sponsors-img/linode-full-RGB-fc.jpg" alt="Linode"></a>
+                                    src="img/sponsors-img/linode-full-RGB-fc.webp" onerror="this.onerror=null;this.src='img/sponsors-img/linode-full-RGB-fc.jpg';" alt="Linode"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.digitalocean.com/"><img
@@ -1030,6 +1036,202 @@
                         </div>
                     </div>
                 </div> -->
+            </div>
+        </div>
+    </section>
+
+    <section 
+        id="testimonials" 
+        style="background-color: white; padding-bottom: 150px;" 
+        class="section-padding-100"
+    >
+        <div class="container">
+            <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
+                <h4 style="color:navy">TESTIMONIALS</h4>
+            </div>
+            <div class="testimonials-body">
+                <!-- slider main container -->
+                <div id="swiper1" class="swiper-container"> 
+
+                    <!-- additional required wrapper -->
+                    <div class="swiper-wrapper">
+
+                        <!-- slides -->
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_1.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                        HackVerse was an intricately planned and seamless executed event, where the efforts of the organizers really showed. Everything went through perfectly, couldn't find a flaw even if I tried.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_5.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                        It was an exceptional experience from the team HackVerse-NITK. I hope you guys conduct more hackathon(s) like this in future to help us to learn and experience the event of pure coding and brain-storming to work on real-time idea(s) or project. <br>
+
+                                        And i hope we still be in contact to be in help eachother out for future projects. <br>
+                                        Thanks Again!!! <br>
+                                        Team: NullCrew <br>
+                                        <a href="https://instagram.com/itsbhanupratap">@ibhanu</a>, 
+                                        <a href="https://instagram.com/abhayrm">@abhayrm</a>,
+                                        <a href="https://instagram.com/wee_pert">@Ashritha</a>
+                                        <br>
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em> NullCrew </em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_7.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                        Hackverse started with an innovative, encouraging boost and the organizers maintained the whole through out the event. It encouraged the students to identify the existing social problems and find solutions through the selection of different tracks and work on it. It serves as a platform to excel ourselves and most importantly, interact with people from different regions across the country and their technical approaches.
+                                        Overall i'd say, it had an enriching and once in a graduation time experience. Looking forward to many such events in the days to come.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_4.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                        
+                                        import happiness<br>
+                                        import support<br>
+                                        import friends<br>
+                                        import knowledge<br>
+                                        import memories<br>
+                                        i=3000<br>
+                                        while(i!=3000):<br>
+                                            print("Fabulous hackethon,loved it,mishal rocks,great hackverse team,awsome name by govind,beautiful goodies.We love Hackverse 3000 times")<br>
+                                            i+=1<br>
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_5.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                     There should be some snacks and coffee available all the time. The food could have been better too.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_6.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description" >
+                                    <p>
+                                        It was an exceptional experience from the team HackVerse-NITK. I hope you guys conduct more hackathon(s) like this in future to help us to learn and experience the event of pure coding and brain-storming to work on real-time idea(s) or project.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_7.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description">
+                                    <p>
+                                       The organization of events was really good however it was kind of a little serious, it would be fun if we had a longer hackathon for about 30 hours or more.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="testimonial__card">
+                                <!-- <div class="testimonial__img">
+                                    <img src="./img/img_7.jpg" alt="">
+                                </div> -->
+                                <div class="testimonial__description">
+                                    <p>
+                                        The overall hackathon experience was good,learnt new jargons, explored new ways to look at the problem. The shortlisting of top 10 teams could have been even better and more transparent,rather than looking for best ideas in individual streams,it would have made more sense to look for the top team among all the participants irrespective of the field their worked on.
+                                    </p>
+                                </div>
+                                <h2 class="testimonial__name"><em>Anonymous</em></h2>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- navigation buttons -->
+                <div class="testimonial-next-prev">
+                    <div id="testimonial-prev" class="swiper-button-prev">
+                        <svg 
+                            version="1.1" id="Capa_1" 
+                            xmlns="http://www.w3.org/2000/svg" 
+                            xmlns:xlink="http://www.w3.org/1999/xlink" 
+                            x="0px" y="0px"
+                            viewBox="0 0 512 512" 
+                            xml:space="preserve"
+                        >
+                            <g>
+                                <path 
+                                    d="M506.134,241.843c-0.006-0.006-0.011-0.013-0.018-0.019l-104.504-104c-7.829-7.791-20.492-7.762-28.285,0.068
+                                        c-7.792,7.829-7.762,20.492,0.067,28.284L443.558,236H20c-11.046,0-20,8.954-20,20c0,11.046,8.954,20,20,20h423.557
+                                        l-70.162,69.824c-7.829,7.792-7.859,20.455-0.067,28.284c7.793,7.831,20.457,7.858,28.285,0.068l104.504-104
+                                        c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z"
+                                />
+                            </g>
+                        </svg>
+                    </div>
+                    <div id="testimonial-next" class="swiper-button-next">
+                        <svg 
+                            version="1.1" id="Capa_1" 
+                            xmlns="http://www.w3.org/2000/svg" 
+                            xmlns:xlink="http://www.w3.org/1999/xlink" 
+                            x="0px" y="0px"
+                            viewBox="0 0 512 512" 
+                            xml:space="preserve"
+                        >
+                            <g>
+                                <path 
+                                    d="M506.134,241.843c-0.006-0.006-0.011-0.013-0.018-0.019l-104.504-104c-7.829-7.791-20.492-7.762-28.285,0.068
+                                        c-7.792,7.829-7.762,20.492,0.067,28.284L443.558,236H20c-11.046,0-20,8.954-20,20c0,11.046,8.954,20,20,20h423.557
+                                        l-70.162,69.824c-7.829,7.792-7.859,20.455-0.067,28.284c7.793,7.831,20.457,7.858,28.285,0.068l104.504-104
+                                        c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z"
+                                />
+                            </g>
+                        </svg>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
@@ -1550,6 +1752,7 @@
 
     <script src="js/gallaryMain.js"></script>
     <script src="js/stats.js"></script>
+    <script src="./js/testimonial.js"></script>
     <!-- Active -->
     <script src="/js/default-assets/active.js"></script>
     <script src="https://kit.fontawesome.com/c74fa6cfb0.js" crossorigin="anonymous"></script>
