--- a/index.html
+++ b/index.html
@@ -1131,11 +1131,11 @@
                             </div>
                         </div>
 
-                        <div class="swiper-slide">
+                        <!--div class="swiper-slide">
                             <div class="testimonial__card">
                                 <!-- <div class="testimonial__img">
                                     <img src="./img/img_5.jpg" alt="">
-                                </div> -->
+                                </div--><!--
                                 <div class="testimonial__description" >
                                     <p>
                                      There should be some snacks and coffee available all the time. The food could have been better too.
@@ -1143,7 +1143,7 @@
                                 </div>
                                 <h2 class="testimonial__name"><em>Anonymous</em></h2>
                             </div>
-                        </div>
+                        </div-->
 
                         <div class="swiper-slide">
                             <div class="testimonial__card">
@@ -1159,11 +1159,11 @@
                             </div>
                         </div>
 
-                        <div class="swiper-slide">
+                        <!--<div class="swiper-slide">
                             <div class="testimonial__card">
                                 <!-- <div class="testimonial__img">
                                     <img src="./img/img_7.jpg" alt="">
-                                </div> -->
+                                </div> --><!--
                                 <div class="testimonial__description">
                                     <p>
                                        The organization of events was really good however it was kind of a little serious, it would be fun if we had a longer hackathon for about 30 hours or more.
@@ -1171,7 +1171,7 @@
                                 </div>
                                 <h2 class="testimonial__name"><em>Anonymous</em></h2>
                             </div>
-                        </div>
+                        </div>-->
 
                         <div class="swiper-slide">
                             <div class="testimonial__card">
