--- a/index.html
+++ b/index.html
@@ -1172,12 +1172,12 @@
                                 <h2 class="testimonial__name"><em>Anonymous</em></h2>
                             </div>
                         </div>-->
-
+                        <!--
                         <div class="swiper-slide">
                             <div class="testimonial__card">
                                 <!-- <div class="testimonial__img">
                                     <img src="./img/img_7.jpg" alt="">
-                                </div> -->
+                                </div> --><!--
                                 <div class="testimonial__description">
                                     <p>
                                         The overall hackathon experience was good,learnt new jargons, explored new ways to look at the problem. The shortlisting of top 10 teams could have been even better and more transparent,rather than looking for best ideas in individual streams,it would have made more sense to look for the top team among all the participants irrespective of the field their worked on.
@@ -1185,7 +1185,7 @@
                                 </div>
                                 <h2 class="testimonial__name"><em>Anonymous</em></h2>
                             </div>
-                        </div>
+                        </div>-->
 
                     </div>
                 </div>
