Change absolute urls to relative urls

--- a/index.html
+++ b/index.html
@@ -1734,14 +1734,14 @@
 
     <!-- **** All JS Files ***** -->
     <!-- jQuery 2.2.4 -->
-    <script src="/js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Popper -->
-    <script src="/js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
     <!-- Bootstrap -->
     <!--script src="/js/bootstrap.min.js"></script>-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- All Plugins -->
-    <script src="/js/confer.bundle.js"></script>
+    <script src="js/confer.bundle.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
@@ -1754,7 +1754,7 @@
     <script src="js/stats.js"></script>
     <script src="./js/testimonial.js"></script>
     <!-- Active -->
-    <script src="/js/default-assets/active.js"></script>
+    <script src="js/default-assets/active.js"></script>
     <script src="https://kit.fontawesome.com/c74fa6cfb0.js" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/940386bfc9.js"></script>
     <script>    
