Change abs urls to rel urls on team page

--- a/team/index.html
+++ b/team/index.html
@@ -257,16 +257,16 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             students_div.style.width = "70%"
         }
     </script>
-    <script src="/team/team_script.js"></script>
-    <script src="/js/jquery.min.js"></script>
+    <script src="team/team_script.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Popper -->
-    <script src="/js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
     <!-- Bootstrap -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="/js/confer.bundle.js"></script>
+    <script src="js/confer.bundle.js"></script>
     <!-- Active -->
-    <script src="/js/default-assets/active.js"></script>
+    <script src="js/default-assets/active.js"></script>
 
 </body>
 
