--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                                 Surathkal</a></li>
                                         <li><a target="_blank" rel="noopener noreferrer" href="/blog/">HackVerse
                                                 Blog</a></li>
-                                        <li><a target="_blank" rel="noopener noreferrer" href="/team">Team</a></li>
+                                        <li><a target="_blank" rel="noopener noreferrer" href="team">Team</a></li>
                                         <!-- <li><a href="schedule.html">- Schedule</a></li>
                                         <li><a href="./faq/">- Tickets</a></li>
                                         <li><a href="blog.html">- Blog</a></li>
